--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,15 @@
 .Boton:hover{
     background-color: #FFB319;
 }
+.Boton1{
+    background-color: #FFB319;
+    border: #FFB319;
+    border-style: solid;
+    border-radius: 100%;
+    width: 90px;
+    height: 90px;
+    margin: 3px;
+}
 .buscador{
     border: 2px #FFB319;
     border-style: solid;
