--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,27 +35,21 @@
   height: 400px;
 }
 
-.Boton {
+.Boton, .Boton1 {
   background: linear-gradient(rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0.274));
   border: #FFB319;
   border-style: solid;
-  border-radius: 100%;
-  width: 90px;
-  height: 90px;
+  height: 100px;
   margin: 3px;
+  width: 100px;
+  border-radius: 100%;
 }
-.Boton:hover {
+.Boton:hover, .Boton1:hover {
   background-color: #FFB319;
 }
 
 .Boton1 {
   background-color: #FFB319;
-  border: #FFB319;
-  border-style: solid;
-  border-radius: 100%;
-  width: 90px;
-  height: 90px;
-  margin: 3px;
 }
 
 .buscador {
@@ -88,7 +82,6 @@
     background-position: 0PX;
     height: 800PX;
   }
-
   .derechos {
     font-size: 12px;
   }
