--- a/assets/scss/_TarjetaInicio.scss
+++ b/assets/scss/_TarjetaInicio.scss
@@ -1,5 +1,3 @@
 .tarjeta{
-    box-shadow: 1px 1px 1px 2px #f3f3f3;
-    border-radius: 10px;
-    height: 250px;
+    @include tarjetaInicio (1px 1px 1px 2px #f3f3f3, 10px, 250px)
 }
