--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,10 +3,9 @@
 @import "reset";
 @import "Footer";
 @import "TarjetaInicio";
-@import "FondoContacto";
-@import "FondoBlog";
+@import "Fondos";
 @import "BotonesBlog";
 @import "BuscadorBlog";
 @import "CardsBlog";
 @import "Media";
-@import "Variables";
+@import "Afiliados"
