--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,11 +20,10 @@
   height: 250px;
 }
 
-.Fondo {
+.FondoContacto {
   background-image: url(../img/contacto\ \(1\).jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: -170px;
   height: 600px;
 }
 
@@ -32,7 +31,15 @@
   background-image: url(../img/Blog/fondo\ con\ elementos.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 400px;
+  height: 500px;
+}
+
+.HeaderAfiliados {
+  background-image: url(../img/afiliados/veterinaria-fondo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  background-position: -460px;
 }
 
 .Boton, .Boton1 {
@@ -72,23 +79,60 @@
   height: 200px;
 }
 
-@media (min-width: 860px) {
-  .Fondo {
-    background-position: -80PX;
+@media (min-width: 750px) {
+  .HeaderAfiliados {
+    background-position: -250px;
   }
 }
 @media (min-width: 960px) {
-  .Fondo {
-    background-position: 0PX;
+  .FondoContacto {
     height: 800PX;
   }
   .derechos {
     font-size: 12px;
   }
+  .HeaderAfiliados {
+    background-position: -250px;
+    height: 600px;
+  }
 }
 @media (min-width: 1200px) {
-  .Fondo {
-    background-position: 0PX;
+  .FondoContacto {
     height: 1000PX;
   }
+  .HeaderAfiliados {
+    background-position: -50px;
+  }
+}
+@media (min-width: 1400px) {
+  .HeaderAfiliados {
+    background-position: 0;
+  }
+}
+.Filtro, .Filtro1 {
+  background-color: #FFE9BC;
+  border: #FFB319;
+  border-width: 1PX;
+  border-style: solid;
+  height: 40px;
+  margin: 3px;
+  width: 200px;
+  border-radius: 20px;
+}
+.Filtro:hover, .Filtro1:hover {
+  background-color: #FFB319;
+}
+
+.Filtro1 {
+  background-color: #FFB319;
+}
+
+.tarjetaAfiliado {
+  box-shadow: 1px 1px 1px 2px #f3f3f3;
+  border-radius: 10px;
+  height: 220px;
+}
+.tarjetaAfiliado:hover {
+  transform: translateX(-15px);
+  box-shadow: 0 8px 8px rgba(20, 20, 18, 0.192);
 }
