--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,14 @@
   box-sizing: border-box;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .footer {
   background-color: #FFB319;
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
 }
 .footer .derechos {
   font-size: 10px;
@@ -135,4 +138,40 @@
 .tarjetaAfiliado:hover {
   transform: translateX(-15px);
   box-shadow: 0 8px 8px rgba(20, 20, 18, 0.192);
+}
+
+.Nosotros {
+  background-image: linear-gradient(120deg, #d8ffff 0, #c2ffff 25%, #aaf0ff 50%, #91e1f4 75%, #7ad3ea 100%);
+}
+
+.cardNosotros {
+  background-color: #f3f3f3;
+  box-shadow: 1px 1px 1px 2px #f3f3f3;
+  border-radius: 10px;
+  height: 250px;
+  width: 500px;
+}
+.cardNosotros .card-title {
+  color: #FFB319;
+}
+.cardNosotros .linea {
+  height: 2px;
+  color: #FFB319;
+  background-color: #FFB319;
+}
+
+.cardNosotros1 {
+  background-color: #f3f3f3;
+  box-shadow: 1px 1px 1px 2px #f3f3f3;
+  border-radius: 10px;
+  height: 360px;
+  width: 500px;
+}
+.cardNosotros1 .card-title1 {
+  color: #FFB319;
+}
+.cardNosotros1 .linea1 {
+  height: 2px;
+  color: #FFB319;
+  background-color: #FFB319;
 }
