--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,4 @@
+@import "reset";
 @import "Mixing";
 @import "Variables";
 @import "reset";
@@ -8,4 +9,5 @@
 @import "BuscadorBlog";
 @import "CardsBlog";
 @import "Media";
-@import "Afiliados"
+@import "Afiliados";
+@import "Nosotros";
