--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,12 +2,12 @@
 @import "Mixing";
 @import "Variables";
 @import "reset";
+@import "navbar";
 @import "Footer";
 @import "TarjetaInicio";
 @import "Fondos";
-@import "BotonesBlog";
-@import "BuscadorBlog";
-@import "CardsBlog";
-@import "Media";
 @import "Afiliados";
 @import "Nosotros";
+@import "Blog";
+@import "Media";
+@import "Contacto";
