--- a/assets/scss/_Afiliados.scss
+++ b/assets/scss/_Afiliados.scss
@@ -1,11 +1,22 @@
+.tituloAfiliados{
+    color: map-get($Colores , secundario );
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.subtituloAfiliados{
+    @extend .tituloAfiliados;
+    margin-top: 30px;
+}
 .Filtro{
+    color:map-get($Colores , secundario ) ;
     background-color: map-get($Colores , terciario );
     border: map-get($Colores , primario );
     border-width: 1PX;
     border-style: solid;
+    font-size: 12px;
     @include botonesBlog (40px,3px,200px,20px);
     &:hover{
         background-color: map-get($Colores , primario );
+        font-weight: 600;
     }
 }
 .Filtro1{
@@ -13,6 +24,9 @@
     background-color: map-get($Colores , primario );
 }
 .tarjetaAfiliado{
+    font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: map-get($Colores , secundario ) ;
     @include tarjetaInicio(1px 1px 1px 2px #f3f3f3, 10px, 220px);
     &:hover{
         transform: translateX(-15px);
