--- a/assets/scss/_Nosotros.scss
+++ b/assets/scss/_Nosotros.scss
@@ -27,3 +27,10 @@
         background-color: map-get($Colores , primario );
     }
 }
+.tituloNosotros{
+    color: map-get($Colores , secundario );
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.parrafoNosotros{
+    @extend .tituloNosotros;
+}
