--- a/assets/scss/_Contacto.scss
+++ b/assets/scss/_Contacto.scss
@@ -6,8 +6,13 @@
     @extend .tituloContacto;
 }
 .btn{
-    color: map-get($Colores , blanco );
+    border-color: map-get($Colores , primario) ;
+    border-radius: 10px;
+    color: map-get($Colores , secundario);
     .imagen{
         margin-right: 8px;
+    }
+    &:hover{
+        color: map-get($Colores , primario );
     }
 }
