--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,10 +4,11 @@
 @import "reset";
 @import "navbar";
 @import "Footer";
-@import "TarjetaInicio";
 @import "Fondos";
 @import "Afiliados";
 @import "Nosotros";
 @import "Blog";
-@import "Media";
 @import "Contacto";
+@import "MiCuenta";
+@import "Inicio";
+@import "Media";
