--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,12 +105,6 @@
   font-size: 10px;
 }
 
-.tarjeta {
-  box-shadow: 1px 1px 1px 2px #f3f3f3;
-  border-radius: 10px;
-  height: 250px;
-}
-
 .FondoContacto {
   background-image: url(../img/contacto\ \(1\).jpg);
   background-size: cover;
@@ -269,6 +263,47 @@
   height: 200px;
 }
 
+.tituloContacto, .parrafoContacto {
+  color: #081920;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.btn {
+  border-color: #FFB319;
+  border-radius: 10px;
+  color: #081920;
+}
+.btn .imagen {
+  margin-right: 8px;
+}
+.btn:hover {
+  color: #FFB319;
+}
+
+.enlace {
+  text-decoration: none;
+}
+
+.FondoC {
+  background: linear-gradient(342deg, rgb(170, 241, 255) 42%, rgba(255, 255, 255, 0.4674157303) 92%);
+}
+
+.tarjeta {
+  box-shadow: 1px 1px 1px 2px #f3f3f3;
+  border-radius: 10px;
+  height: 250px;
+}
+
+.carousel-caption {
+  background-color: rgba(251, 251, 251, 0.2674157303);
+  height: 180px;
+  right: 0;
+  left: 0;
+  padding: 30px 60px;
+  text-align: center;
+  width: 100%;
+}
+
 @media (min-width: 750px) {
   .HeaderAfiliados {
     background-position: -250px;
@@ -307,15 +342,4 @@
   .HeaderAfiliados {
     background-position: 0;
   }
-}
-.tituloContacto, .parrafoContacto {
-  color: #081920;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.btn {
-  color: #fff;
-}
-.btn .imagen {
-  margin-right: 8px;
 }
