--- a/assets/scss/_MiCuenta.scss
+++ b/assets/scss/_MiCuenta.scss
@@ -2,5 +2,6 @@
     text-decoration: none;
 }
 .FondoC{
-    background: linear-gradient(342deg, rgba(170,241,255,1) 42%, rgba(255,255,255,0.4674157303370786) 92%);
+    height: 703px;
+    background: linear-gradient(342deg, rgba(170,241,255,1) 42%, rgba(255,255,255,0.4674157303370786) 82%);
 }
