--- a/assets/scss/_Media.scss
+++ b/assets/scss/_Media.scss
@@ -23,6 +23,9 @@
     .Filtro{
         font-size: 16px;
     }
+    .FondoC{
+        height: 800px;
+    }
 }
 @media(min-width:1200px){
     .FondoContacto{
